# plasma-shock

./: CMakeLists.txt  README.md  avg_grad_scheme.f90  bookkeeping.f90  conserved_foamm_scheme.f90  foamm_main.f90  foamm_scheme.f90  lxf_main.f90  lxf_scheme.f90  mesh.f90  model.f90  scheme.f90  tvdlxf_main.f90  tvdlxf_scheme.f90
